@@ -113,14 +113,23 @@ namespace Astroid {
     /* set up message id and random server name for editor */
     id = edit_id++;
 
-    char hostname[1024];
-    hostname[1023] = 0;
-    gethostname (hostname, 1022);
+    char _hostname[1024];
+    _hostname[1023] = 0;
+    gethostname (_hostname, 1023);
+
+    ustring hostname = astroid->config ().get <string> ("mail.message_id_fqdn");
+    UstringUtils::trim (hostname);
+    if (hostname.empty ()) hostname = _hostname;
+
+
+    ustring user = astroid->config ().get<string> ("mail.message_id_user");
+    UstringUtils::trim (user);
+    if (user.empty ()) user = "astroid";
 
     msg_time = time(0);
     ustring _mid = UstringUtils::random_alphanumeric (10);
 
-    _mid = ustring::compose ("%1.astroid.%2@%3", msg_time, _mid, hostname);
+    _mid = ustring::compose ("%1.%2.%3@%4", msg_time, _mid, user, hostname);
 
     if (msg_id == "") {
       msg_id = _mid;
