@@ -8,6 +8,8 @@
 
 * Make id:Message-ID urls clickable.
 
+* Make Message-ID customizable, and User-Agent optional.
+
 == v0.6 / 2016-07-23
 
 * Use any editor (general XEmbed support in edit-message window): Emacs
